# github-bot

./: .gitignore  config.example.yml  main.py  pyproject.toml  readme.md
modules/: github_repo.py
