[tool.poetry]
name = "ariadne-github-bot"
version = "0.1.0"
description = ""
authors = ["djkcyl <cyl@cyllive.cn>"]

[tool.poetry.dependencies]
python = "^3.9"
graia-ariadne = {extras = ["full"], version = "^0.5.0", allow-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
default = true
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"